<resources>
    <string name="app_name">Kalendaryo</string>
    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="enter_kalendar_name">Enter kalendar name</string>
    <string name="submit">Submit</string>
    <string name="name_your_kalendar">Name your kalendar</string>
    <string name="optional">(optional)</string>
    <string name="log_out">Log out</string>
    <string name="create">Create</string>
    <string name="next">Next</string>
    <string name="which_options">Which parameters do you want to share?</string>
    <string name="deleteKalendar">Delete</string>
    <string name="kalendarName">Kalendar Name</string>
    <string name="kalendarUser">Kalendar User</string>
    <string name="mergedCalendars">Merged Google Calendars</string>
    <string name="select_at_least_one">Please select at least one calendar to merge</string>
    <string name="cant_add_logged_in_account">Sorry, you can\'t add the account you are already logged into!</string>
    <string name="successful_kalendar_deletion">Kalendar is deleted successfully</string>
    <string name="unsuccessful_kalendar_deletion">Kalendar can not be deleted</string>
    <string name="successful_logout">You successfully logged out</string>
    <string name="surely_delete_kalendar">Are you sure you want to delete the kalendar?</string>
    <string name="successful_account_deletion">Account is deleted successfully</string>
    <string name="unsuccessful_account_deletion">Account can not be deleted</string>
    <string name="surely_delete_account">Are you sure you want to delete the account?</string>
    <string name="warning">Warning!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="kalendars">Kalendars</string>
    <string name="accounts">Accounts</string>
    <string name="no_events">There are no events to display</string>
    <string name="swipe_to_see">Swipe to see your events</string>
    <string name="wait_until_displayed">Please wait until preview gets displayed</string>
    <string name="syncKalendar">Sync</string>
</resources>
