<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WeekViewActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <item android:id="@+id/action_today"
        android:title="@string/action_today"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"/>
    <group android:checkableBehavior="single">
        <item android:id="@+id/action_day_view"
            android:title="@string/action_day_view"
            android:orderInCategory="100"
            android:showAsAction="ifRoom"/>
        <item android:id="@+id/action_three_day_view"
            android:title="@string/action_three_day_view"
            android:orderInCategory="100"
            android:showAsAction="ifRoom"
            android:checked="true"/>
        <item android:id="@+id/action_week_view"
            android:title="@string/action_week_view"
            android:orderInCategory="100"
            android:showAsAction="ifRoom"/>
    </group>

</android.support.constraint.ConstraintLayout>